# havenjob

./: .gitignore  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  conftest.py  docker-entrypoint.sh  pyproject.toml
backend/apps/ai/: admin.py  api.py  cv_parsing.py  models.py  schemas.py  services.py  tests.py
backend/apps/ai/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
backend/apps/email/: api.py  apps.py  extraction.py  schemas.py  services.py  tests.py
backend/apps/notifications/: admin.py  api.py  models.py  schemas.py  services.py  tests.py
backend/apps/notifications/migrations/: 0001_initial.py  0002_initial.py
backend/apps/tracker/: admin.py  api.py  models.py  schemas.py  tests.py  views.py
backend/apps/tracker/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: admin.py  api.py  models.py  schemas.py  services.py  tests.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/providers/: __init__.py
backend/providers/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
docs/: PRD.md  database-schema.md  implementation-plan.md
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/applications/: page.tsx
frontend/components/dashboard/: add-application-modal.tsx  auth-guard.tsx  dashboard-shell.tsx  status-dropdown.tsx
(+5 files in other folders)
